alpha7:
    - file system bugfixes
    - ruler in file display
    - state machine implementation
    - shell and edit states
alpha6:
    - basic file system implementation:
        - read file from disk to buffer
        - display buffer
        - write buffer to the disk
    - example file on floppy
    - clean up, refactor
alpha5:
    - code refactor, cleanup, comments added
    - working icons (select, execute, description)
    - detect cursors for icons movement
    - real time loop
    - display kernel tick (live + commands history)
    - beeper support for boot tune and commands response
    - fix correct handling 40/80 screen modes
alpha4 [RELEASED]:
    - updated charset
    - two video modes: 80x25, 40x25
    - permanent header with logo and version
    - finalized stats command
alpha3 [RELEASED]:    
    - hardware stats (wip)
    - better comments in kernel and boot
    - automatic list of commands in help
    - remade logo and icons
    - commands refactor for easy expansion
alpha2 [RELEASED]:
    - working kernel basics
    - colors
    - custom glyphs
    - tool: for converting png tileset to asm data
    - icons for UI in the os
    - basic shell functions: help, version
    - debug option showing all custom glyphs w/ IDs
alpha1 [RELEASED]:
    - bootloader
    - empty kernel
    - ability to boot the OS
alpha0 [RELEASED]:
    - init repository
    - Initial files structure.
    - Initial documentation and idea for the system.